fix: CSS rules for sections on mobile devices as per @schaubl, #267

--- a/clj/resources/static_content/css/section.css
+++ b/clj/resources/static_content/css/section.css
@@ -34,6 +34,10 @@ span.row span {
 @media (max-width: 767px) {
   /* Phone (xs) */
   .ss-section-content {
-    padding: 0;
+    padding: 8px;
   }
+}
+
+.ss-dynamic-subsection > .ss-section-content {
+  padding: 0;
 }
